# GEN_SCL_NAT

./: pyproject.toml  requirements.txt
configs/: infer_restaurant.sh  train_2015.sh
data/2015SB12-fold-0-latency-10/: test.txt
data/2015SB12-fold-0-latency-100/: train.txt
data/2015SB12-fold-0-latency-20/: test.txt
data/2015SB12-fold-0-latency-30/: test.txt
data/2015SB12-fold-0-latency-40/: test.txt
data/2015SB12-fold-0-latency-50/: test.txt
data/2015SB12-fold-0-latency-60/: test.txt
data/2015SB12-fold-0-latency-70/: test.txt
data/2015SB12-fold-0-latency-80/: dev.txt  test.txt
data/2015SB12-fold-0-latency-90/: test.txt
data/2015SB12-fold-1-latency-10/: test.txt
data/2015SB12-fold-1-latency-20/: test.txt
data/2015SB12-fold-1-latency-30/: test.txt
data/2015SB12-fold-1-latency-40/: dev.txt  test.txt
data/2015SB12-fold-1-latency-50/: test.txt
data/2015SB12-fold-1-latency-60/: test.txt
data/2015SB12-fold-1-latency-70/: test.txt
data/2015SB12-fold-1-latency-80/: test.txt
data/2015SB12-fold-1-latency-90/: test.txt  train.txt
data/2015SB12-fold-2-latency-10/: test.txt  train.txt
data/2015SB12-fold-2-latency-20/: test.txt
data/2015SB12-fold-2-latency-30/: test.txt
data/2015SB12-fold-2-latency-40/: test.txt
data/2015SB12-fold-2-latency-50/: test.txt
data/2015SB12-fold-2-latency-60/: dev.txt  test.txt
data/2015SB12-fold-2-latency-70/: test.txt
data/2015SB12-fold-2-latency-80/: test.txt
data/2015SB12-fold-2-latency-90/: test.txt
data/2015SB12-fold-3-latency-0/: test.txt
source/: eval_utils.py  gen_scl_nat_main.py  wrapper.py
(+90 files in other folders)
