[tool.poetry]
name = "gen_scl_nat_env"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "3.8.3"
aiosignal = "1.3.1"
async-timeout = "4.0.2"
attrs = "22.2.0"
blis = "0.7.9"
catalogue = "2.0.8"
charset-normalizer = "2.1.1"
click = "8.1.3"
confection = "0.0.4"
cymem = "2.0.7"
filelock = "3.9.0"
frozenlist = "1.3.3"
fsspec = "2022.11.0"
huggingface-hub = "0.11.1"
idna = "3.4"
jinja2 = "3.1.2"
joblib = "1.2.0"
langcodes = "3.3.0"
lightning-utilities = "0.5.0"
markupsafe = "2.1.1"
multidict = "6.0.4"
murmurhash = "1.0.9"
nltk = "3.8.1"
numpy = "1.24.1"
packaging = "23.0"
parse = "1.19.0"
pathy = "0.10.1"
preshed = "3.0.8"
protobuf = "3.20.1"
pydantic = "1.10.4"
pytorch-lightning = "1.8.6"
pyyaml = "6.0"
regex = "2022.10.31"
requests = "2.28.2"
sentencepiece = "0.1.97"
smart-open = "6.3.0"
spacy = "3.4.4"
spacy-legacy = "3.0.11"
spacy-loggers = "1.0.4"
srsly = "2.4.5"
tensorboardx = "2.5.1"
thinc = "8.1.7"
tokenizers = "0.13.2"
torch = "1.13.1"
torchmetrics = "0.11.0"
tqdm = "4.64.1"
transformers = "4.25.1"
typer = "0.7.0"
typing-extensions = "4.4.0"
urllib3 = "1.26.14"
wasabi = "0.10.1"
yarl = "1.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
